--- a/_sass/_events-panel.scss
+++ b/_sass/_events-panel.scss
@@ -167,7 +167,7 @@ events panel
 @media screen and (min-width: 1400px) {
   .events-wrap{
     .events-panel{
-      right: -40px;
+      // right: -40px;
     }
   }
 }
