--- a/_layouts/workshop-detail.html
+++ b/_layouts/workshop-detail.html
@@ -77,7 +77,7 @@
         <div class="col-lg-8 col-lg-offset-2"> 
           <div class="container provider">
             <div class="col-lg-3">
-              <img src="/static/img/Stuhlkreis-revolte.png" width="110" alt="Logo Stuhlkreis-Revolte">
+              <img src="/static/img/stuhlkreis-revolte.png" width="110" alt="Logo Stuhlkreis-Revolte">
             </div>
             <div class="col-lg-7">
               <h3>Stuhlkreis-Revolte</h3>
@@ -96,7 +96,7 @@
             </div>
             <div class="col-lg-7">
               <h3>CreativeGaming</h3>
-              <p>Creative-Gaming ist Pionierin des medienpädagogischen und kreativen Einsatzes von Computerspielen. Die Initiative hat den Workshop {{ page.title }} schon mehrere Male durchgeführt.
+              <p>Creative-Gaming ist Pionierin des medienpädagogischen und kreativen Einsatzes von Computerspielen. Die Initiative hat den Workshop „{{ page.title }}“ schon mehrere Male durchgeführt.
               <br>
                 <a class="text__blue" href="mailto:info@creative-gaming.eu">Anfragen</a>
               </p>
@@ -108,7 +108,7 @@
         <div class="col-lg-6 col-lg-offset-3"> 
           <div class="container">
             <h2 class="section-headline">Workshop selber durchführen</h2>
-            <p>Um den Workshop selbst durchführen zu können, haben wir dir alle notwendigen Infos zusammengestellt – eine Übersicht über alle Matieralien, einen detaillierten Ablaufplan sowie Teaservideos und fertiges Informationsmaterial zum selber Drucken. Alle Materialien sind, falls nicht anders gekennzeichnet, unter folgender Creative Commons Lizenz verwendbar: <a class="highlight-grey" href="https://www.creativecommons.org/licenses/by/4.0/legalcode">CC-BY 4.0, OKF DE</a></p>
+            <p>Um den Workshop selbst durchführen zu können, haben wir dir alle notwendigen Infos zusammengestellt – eine Übersicht über alle Matieralien, einen detaillierten Ablaufplan sowie Teaservideos und fertiges Informationsmaterial zum selber Drucken. Alle Materialien sind, falls nicht anders gekennzeichnet, unter folgender Creative Commons Lizenz verwendbar: <a class="highlight-grey" href="https://www.creativecommons.org/licenses/by/4.0/legalcode">CC-BY 4.0, OKF DE</a>{{ post.ws_hinweis }} </p>
           </div>
           {% if page.downloads.size > 0 %}
             <div class="container">
