added QFC and updated Link for workshop docs

--- a/_layouts/workshop-detail.html
+++ b/_layouts/workshop-detail.html
@@ -103,6 +103,20 @@
             </div>
           </div>
         </div>
+        <div class="col-lg-8 col-lg-offset-2"> 
+          <div class="container provider">
+            <div class="col-lg-3">
+              <img src="/static/img/QFC_solo.jpg" width="110" alt="Logo Qualifizierungsfoerderwerk Chemie">
+            </div>
+            <div class="col-lg-7">
+              <h3>Qualifizierungsförderwerk Chemie</h3>
+              <p>Das Qualifizierungsförderwerk Chemie – kurz QFC – ist ein gemeinnütziger Bildungsträger der IG Bergbau Chemie Energie. Sie führen „{{ page.title }}“ in Ausbildungsbetrieben und Berufsschulen durch.
+              <br>
+                <a class="text__blue" href="info@qfc.de">Anfragen</a>
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="container">
         <div class="col-lg-6 col-lg-offset-3"> 
