fixed broken Link

--- a/_layouts/workshop-detail.html
+++ b/_layouts/workshop-detail.html
@@ -112,7 +112,7 @@
               <h3>Qualifizierungsförderwerk Chemie</h3>
               <p>Das Qualifizierungsförderwerk Chemie – kurz QFC – ist ein gemeinnütziger Bildungsträger der IG Bergbau Chemie Energie. Sie führen „{{ page.title }}“ in Ausbildungsbetrieben und Berufsschulen durch.
               <br>
-                <a class="text__blue" href="info@qfc.de">Anfragen</a>
+                <a class="text__blue" href="mailto:info@qfc.de">Anfragen</a>
               </p>
             </div>
           </div>
