Add deprecation banner

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -38,6 +38,12 @@
 
 <div class="body-wrap">
 	<div class="page-wrap">
+<!--		<div class="deprecation-banner">-->
+			<div class="alert alert-danger">
+				Diese Website ist Teil eines abgeschlossenen Projekts der Open Knowledge Foundation Deutschland und wird nicht mehr aktualisiert.
+				Das gültige Impressum und die Datenschutzerklärung finden sich auf <a href="https://okfn.de/impressum">okfn.de/impressum</a>.
+			</div>
+<!--		</div>-->
         {% include header-nav.liquid %}
         <div class="row">
             {% if page.hide_hero != true and page.layout != 'idee' %}
